--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Ernest <soc221b.e@gmail.com>",
   "license": "GPL-3.0",
   "workspaces": [
+    "devtools",
     "devtools/panels/grpc"
   ],
   "devDependencies": {
