--- a/devtools/package.json
+++ b/devtools/package.json
@@ -8,5 +8,7 @@
   "devDependencies": {
     "webpack": "5.98.0",
     "webpack-cli": "6.0.1"
-  }
+  },
+  "author": "Ernest <soc221b.e@gmail.com>",
+  "license": "GPL-3.0"
 }
