--- a/devtools/panels/grpc/package.json
+++ b/devtools/panels/grpc/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "name": "grpc",
-  "type": "module",
+  "author": "Ernest <soc221b.e@gmail.com>",
+  "license": "GPL-3.0",
   "scripts": {
     "protoc": "rm -rf src/protos && mkdir src/protos && export IN_DIR=googleapis/google/rpc OUT_DIR=./src/protos && protoc -I=$IN_DIR code.proto status.proto error_details.proto --js_out=import_style=commonjs,binary:$OUT_DIR --grpc-web_out=import_style=commonjs+dts,mode=grpcwebtext:$OUT_DIR",
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
@@ -44,18 +45,12 @@
     "@types/ua-parser-js": "0.7.39",
     "cross-env": "7.0.3",
     "css-loader": "7.1.2",
-    "cy-verify-downloads": "0.2.6",
-    "cypress": "14.2.0",
-    "cypress-file-upload": "5.0.8",
-    "cypress-network-idle": "1.15.0",
     "html-webpack-plugin": "5.6.3",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.5.3",
     "postcss-loader": "8.1.1",
-    "prettier": "3.5.3",
     "rimraf": "6.0.1",
-    "start-server-and-test": "2.0.10",
     "style-loader": "4.0.0",
     "swc-loader": "0.2.6",
     "tailwindcss": "4.0.13",
