--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,15 @@
 {
+  "jsonRecursiveSort": true,
+  "multilineArraysWrapThreshold": 0,
+  "plugins": [
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-sort-json",
+    "prettier-plugin-multiline-arrays",
+    "prettier-plugin-packagejson"
+  ],
   "printWidth": 100,
-  "trailingComma": "all",
-  "tabWidth": 2,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
