--- a/example/connect-es/client/package.json
+++ b/example/connect-es/client/package.json
@@ -1,11 +1,15 @@
 {
-  "private": true,
   "name": "client",
   "version": "1.0.0",
+  "private": true,
   "license": "MIT",
   "scripts": {
-    "gen": "export IN_DIR=../../protos OUT_DIR=./src/protos && protoc -I=$IN_DIR chat.proto --plugin=protoc-gen-es=node_modules/.bin/protoc-gen-es --es_out $OUT_DIR --es_opt target=ts",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "gen": "export IN_DIR=../../protos OUT_DIR=./src/protos && protoc -I=$IN_DIR chat.proto --plugin=protoc-gen-es=node_modules/.bin/protoc-gen-es --es_out $OUT_DIR --es_opt target=ts"
+  },
+  "dependencies": {
+    "@connectrpc/connect": "2.0.2",
+    "@connectrpc/connect-web": "2.0.2"
   },
   "devDependencies": {
     "@bufbuild/protoc-gen-es": "2.2.3",
@@ -17,9 +21,5 @@
     "webpack": "5.98.0",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.0"
-  },
-  "dependencies": {
-    "@connectrpc/connect": "2.0.2",
-    "@connectrpc/connect-web": "2.0.2"
   }
 }
