--- a/example/grpc-web/client/tsconfig.json
+++ b/example/grpc-web/client/tsconfig.json
@@ -1,11 +1,13 @@
 {
-  "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "module": "commonjs" /* Specify what module code is generated. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+    "module": "commonjs" /* Specify what module code is generated. */,
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "strict": true /* Enable all strict type-checking options. */,
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+    "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+  },
+  "include": [
+    "src/**/*.ts"
+  ]
 }
