--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,21 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "automerge": true,
-  "automergeType": "pr",
   "automergeStrategy": "squash",
-  "ignorePaths": ["**/node_modules/**"],
-  "packageRules": [
-    { "matchPackageNames": ["*"], "rangeStrategy": "pin" },
-    { "matchDepTypes": ["engines", "peerDependencies"], "rangeStrategy": "auto" }
+  "automergeType": "pr",
+  "extends": [
+    "config:base"
   ],
-  "extends": ["config:base"]
+  "ignorePaths": [
+    "**/node_modules/**"
+  ],
+  "packageRules": [
+    { "matchPackageNames": [
+        "*"
+      ], "rangeStrategy": "pin" },
+    { "matchDepTypes": [
+        "engines",
+        "peerDependencies"
+      ], "rangeStrategy": "auto" }
+  ]
 }
