--- a/devtools/package.json
+++ b/devtools/package.json
@@ -8,6 +8,9 @@
     "build": "webpack --mode production"
   },
   "devDependencies": {
+    "@types/chrome": "0.0.309",
+    "swc-loader": "0.2.6",
+    "typescript": "5.8.2",
     "webpack": "5.98.0",
     "webpack-cli": "6.0.1"
   }
