--- a/content-scripts/package.json
+++ b/content-scripts/package.json
@@ -8,6 +8,12 @@
     "build": "webpack --mode production"
   },
   "devDependencies": {
+    "@connectrpc/connect": "^2.0.2",
+    "@types/chrome": "0.0.309",
+    "@types/google-protobuf": "^3.15.12",
+    "grpc-web": "^1.5.0",
+    "swc-loader": "0.2.6",
+    "typescript": "5.8.2",
     "webpack": "5.98.0",
     "webpack-cli": "6.0.1"
   }
