--- a/content-scripts/package.json
+++ b/content-scripts/package.json
@@ -12,7 +12,11 @@
     "@types/chrome": "0.1.32",
     "@types/google-protobuf": "3.15.12",
     "grpc-web": "2.0.2",
-    "swc-loader": "0.2.6",
+    "babel-loader": "^9.1.0",
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-typescript": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
     "typescript": "5.9.3",
     "webpack": "5.103.0",
     "webpack-cli": "6.0.1"
