--- a/devtools/panels/grpc/package.json
+++ b/devtools/panels/grpc/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "build:compiler": "cross-env REACT_COMPILER=1 NODE_ENV=production webpack",
+    "typecheck": "tsc -p ./tsconfig.json --noEmit",
     "protoc": "rm -rf src/protos && mkdir src/protos && export IN_DIR=googleapis/google/rpc OUT_DIR=./src/protos && protoc -I=$IN_DIR code.proto status.proto error_details.proto --js_out=import_style=commonjs,binary:$OUT_DIR --grpc-web_out=import_style=commonjs+dts,mode=grpcwebtext:$OUT_DIR",
     "test": "jest"
   },
@@ -31,8 +33,6 @@
     "zod": "4.1.13"
   },
   "devDependencies": {
-    "@swc/core": "1.15.3",
-    "@swc/jest": "0.2.39",
     "@tailwindcss/postcss": "4.1.17",
     "@types/chrome": "0.1.32",
     "@types/google-protobuf": "3.15.12",
@@ -52,8 +52,14 @@
     "postcss-loader": "8.2.0",
     "rimraf": "6.1.2",
     "style-loader": "4.0.0",
-    "swc-loader": "0.2.6",
+    "babel-plugin-react-compiler": "^0.1.0",
     "tailwindcss": "4.1.17",
+    "@babel/core": "^7.22.0",
+    "babel-loader": "^9.1.2",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
+    "@babel/preset-typescript": "^7.22.0",
+    "babel-jest": "^30.2.0",
     "ts-essentials": "10.1.1",
     "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
