--- a/devtools/panels/grpc/package.json
+++ b/devtools/panels/grpc/package.json
@@ -22,8 +22,8 @@
     "json-stable-stringify": "1.3.0",
     "lodash": "4.17.21",
     "rc-rate": "2.13.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-inspector": "9.0.0",
     "react-popper": "2.3.0",
     "react-tooltip": "5.30.0",
@@ -40,8 +40,8 @@
     "@types/json-stable-stringify": "1.2.0",
     "@types/lodash": "4.17.21",
     "@types/node": "24.10.1",
-    "@types/react": "18.3.27",
-    "@types/react-dom": "18.3.7",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/ua-parser-js": "0.7.39",
     "cross-env": "10.1.0",
     "css-loader": "7.1.2",
